<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/movie_search">

    <fragment
        android:id="@+id/movie_search"
        android:name="com.example.android.githubsearchwithnavigation.ui.MovieSearchFragment"
        android:label="@string/label_movie_search">
        <action
            android:id="@+id/navigate_to_search_results"
            app:destination="@id/movie_search_results"/>
    </fragment>

    <fragment
        android:id="@+id/movie_search_results"
        android:name="com.example.android.githubsearchwithnavigation.ui.SearchResultFragment"
        android:label="@string/label_search_results">
        <action
            android:id="@+id/navigate_to_movie_detail"
            app:destination="@id/movie_detail"/>
        <argument
            android:name="searchResults"
            app:argType="string"/>
    </fragment>

    <fragment
        android:id="@+id/movie_detail"
        android:name="com.example.android.githubsearchwithnavigation.ui.MovieDetailFragment"
        android:label="@string/label_movie_detail">
        <argument
            android:name="movie"
            app:argType="com.example.android.githubsearchwithnavigation.data.Movie" />
        <argument
            android:name="intVal"
            app:argType="integer" />
        <action
        android:id="@+id/navigate_to_movie_similar_results"
        app:destination="@id/movie_similar_search"/>
    </fragment>

    <fragment
        android:id="@+id/movie_similar_search"
        android:name="com.example.android.githubsearchwithnavigation.ui.SimilarMoviesFragment"
        android:label="@string/label_movie_detail">
        <argument
            android:name="movie"
            app:argType="com.example.android.githubsearchwithnavigation.data.Movie" />
        <action
            android:id="@+id/navigate_back_to_movie_detail"
            app:destination="@id/movie_detail"/>
    </fragment>

    <fragment
        android:id="@+id/settings"
        android:name="com.example.android.githubsearchwithnavigation.ui.SettingsFragment"
        android:label="@string/label_settings" />

</navigation>